dal template and pebbly

--- a/index.html
+++ b/index.html
@@ -698,11 +698,14 @@
                 const hasCardImage = article.cardImage && article.cardImage.trim() !== '';
                 let displayImage = hasCardImage ? article.cardImage : article.image;
 
-                // Convert relative paths to absolute URLs
+                // Convert relative paths to absolute URLs (support localhost testing)
                 if (displayImage && !displayImage.startsWith('http')) {
+                    const baseUrl = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
+                        ? window.location.origin
+                        : 'https://blog.pebblous.ai';
                     displayImage = displayImage.startsWith('/')
-                        ? `https://blog.pebblous.ai${displayImage}`
-                        : `https://blog.pebblous.ai/${displayImage}`;
+                        ? `${baseUrl}${displayImage}`
+                        : `${baseUrl}/${displayImage}`;
                 }
 
                 // Check if displaying Pebblous logo (both orange and black variants)
