--- a/project/DAL/pebbly-evolution-01.html
+++ b/project/DAL/pebbly-evolution-01.html
@@ -77,6 +77,72 @@
     <!-- JSON-LD: BreadcrumbList -->
     <script id="schema-breadcrumb" type="application/ld+json"></script>
 
+    <!-- JSON-LD: FAQ Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "페블리(Pebbly)란 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "페블리(Pebbly)는 페블러스의 공식 마스코트로, 조약돌 형태의 캐릭터입니다. 단순한 장식이 아니라 데이터의 품질, 신뢰, 그리고 변화(Transformation)를 상징하는 개념적 매개체입니다. 페블리는 '신뢰할 수 있고, 설명 가능하며, AI 시스템에 즉시 투입 가능한 데이터'를 상징합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "페블리의 진화 단계는 어떻게 되나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "페블리는 4단계로 진화합니다: 1) Sand Pebbly (샌드 페블리) - 원석 상태, 파편화되고 노이즈가 많은 데이터, 2) Gravel Pebbly (그래블 페블리) - 수집되었으나 다듬어지지 않은 거친 상태, 3) Pebbly - 깨끗하고 균형 잡힌 AI-Ready 상태 (기본 형태), 4) Gem Pebbly (젬 페블리) - 목적에 맞게 최적화되어 최고의 가치를 창출하는 상태."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "왜 '페블리'라는 이름을 사용하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "페블러스(Pebblous)는 'Fabulous Pebble(멋진 조약돌)'이라는 콘셉트에서 출발했습니다. 파편화되고 노이즈가 많은 '모래알' 같은 데이터가 아닌, 단단하고 신뢰할 수 있으며 실행 가능한(Actionable) 데이터를 지향하는 철학을 담고 있습니다. '페블리'는 이 철학의 이상적인 상태인 조약돌(Pebble)을 대표합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "데이터 품질과 페블리 진화의 관계는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "페블러스는 데이터 품질을 좋고 나쁨의 이분법이 아닌 '진화의 과정'으로 정의합니다. 이 4단계 프레임워크는 데이터 품질 모델(기술적 성숙도 측정), 제품 서사(고객에게 제공하는 가치 제안), 캐릭터 진화 아크(마스코트의 성장 스토리)의 세 가지 기능을 동시에 수행합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Gem Pebbly(젬 페블리)는 어떤 상태를 의미하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Gem Pebbly(젬 페블리)는 데이터 품질의 최고 단계로, 목적에 맞게 최적화되어 최고의 가치를 창출하는 상태입니다. 시각적으로는 빛나는 푸른색 다이아몬드/보석 재질로 표현되며, 내부에서 빛이 발광(Caustics)합니다. 이는 AI 데이터의 이상적인 최종 상태를 상징합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What is Pebbly?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Pebbly is the official mascot of Pebblous, a pebble-shaped character that symbolizes the tangible status of data. It represents data quality, trust, and transformation. The character embodies 'reliable, explainable, and AI-ready data' that can be immediately deployed in AI systems."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What are the evolution stages of Pebbly?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Pebbly evolves through 4 stages: 1) Sand Pebbly - raw, fragmented data with noise, 2) Gravel Pebbly - collected but unrefined rough state, 3) Pebbly - clean, balanced, AI-Ready state (default form), 4) Gem Pebbly - optimized for purpose, creating maximum value. This evolution mirrors the data quality transformation process."
+                }
+            }
+        ]
+    }
+    </script>
+
     <!-- Pretendard Font -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
 
