--- a/project/DAL/code-painting-essay/code-painting-essay.html
+++ b/project/DAL/code-painting-essay/code-painting-essay.html
@@ -455,6 +455,72 @@
             color: var(--text-tertiary);
         }
 
+        /* Download Section */
+        .download-section {
+            margin-top: 3rem;
+            padding-top: 2rem;
+            border-top: 1px solid var(--border-color);
+        }
+
+        .download-title {
+            font-family: var(--ui-font);
+            font-size: 1rem;
+            font-weight: 500;
+            color: var(--text-secondary);
+            margin-bottom: 1.5rem;
+        }
+
+        .download-buttons {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .download-btn {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            padding: 0.875rem 1.5rem;
+            background: var(--bg-secondary);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            text-decoration: none;
+            color: var(--text-primary);
+            transition: all 0.2s ease;
+        }
+
+        .download-btn:hover {
+            background: var(--accent-color);
+            color: white;
+            border-color: var(--accent-color);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .download-icon {
+            font-size: 1.25rem;
+        }
+
+        .download-text {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 0.125rem;
+        }
+
+        .download-lang {
+            font-family: var(--ui-font);
+            font-weight: 600;
+            font-size: 0.9rem;
+        }
+
+        .download-filename {
+            font-family: var(--ui-font);
+            font-size: 0.75rem;
+            opacity: 0.7;
+        }
+
         /* Back to DAL */
         .back-link {
             display: inline-flex;
@@ -933,6 +999,29 @@ imgL = Table[ f [imagination, Param->p, Author->"Joo-Haeng Lee"], {p, paramL}]
                 <div class="author-title" style="margin-top: 1rem; color: var(--text-tertiary);">
                     원문 출처: 대전 비엔날레 2020<br>
                     '인공지능 : 햇살은 유리창을 잃고'
+                </div>
+            </div>
+
+            <!-- PDF Download Section -->
+            <div class="download-section">
+                <h3 class="download-title">📄 원문 PDF 다운로드</h3>
+                <div class="download-buttons">
+                    <a href="Code%20Painting%20-%20Daejeon%20Biennale%202020%20Korean%20v0.8.pdf"
+                       class="download-btn" download>
+                        <span class="download-icon">⬇</span>
+                        <span class="download-text">
+                            <span class="download-lang">한국어</span>
+                            <span class="download-filename">Korean v0.8.pdf</span>
+                        </span>
+                    </a>
+                    <a href="Code%20Painting%20-%20Daejeon%20Biennale%202020%20English%20v0.8.pdf"
+                       class="download-btn" download>
+                        <span class="download-icon">⬇</span>
+                        <span class="download-text">
+                            <span class="download-lang">English</span>
+                            <span class="download-filename">English v0.8.pdf</span>
+                        </span>
+                    </a>
                 </div>
             </div>
         </footer>
