--- a/project/DAL/code-painting-essay/code-painting-essay.html
+++ b/project/DAL/code-painting-essay/code-painting-essay.html
@@ -162,6 +162,34 @@
     }
     </script>
 
+    <!-- JSON-LD: BreadcrumbList -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Pebblous Blog",
+                "item": "https://blog.pebblous.ai/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Data Art Lab",
+                "item": "https://blog.pebblous.ai/#art"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "코드로 그린 그림",
+                "item": "https://blog.pebblous.ai/project/DAL/code-painting-essay/code-painting-essay.html"
+            }
+        ]
+    }
+    </script>
+
     <style>
         :root {
             --essay-font: 'Noto Serif KR', serif;
@@ -739,7 +767,7 @@
 
     <main class="max-w-4xl mx-auto px-6 py-8">
         <!-- Back Link -->
-        <a href="/project/DAL/" class="back-link">
+        <a href="https://blog.pebblous.ai/#art" class="back-link">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M19 12H5M12 19l-7-7 7-7"/>
             </svg>
