update pdf download

--- a/project/DAL/code-painting.html
+++ b/project/DAL/code-painting.html
@@ -580,6 +580,12 @@
                 중요한 것은, 코드 페인팅에서 인공지능은 작가를 대체하는 것이 아니라 <strong>붓이나 물감처럼 작가가 사용하는 도구</strong>라는 점입니다.
                 상상하고, 코드를 작성하고, 오류를 발견하고, 작품을 선정하는 핵심적인 창작 과정에서 인간의 역할은 필수적입니다.
             </p>
+            <p>
+                이 '코드 페인팅' 철학은 이주행 작가가 <strong><a href="https://pebblous.ai" target="_blank">페블러스(Pebblous)</a></strong>를 창업한 이후,
+                <strong>Data Art Lab</strong>에서 더욱 진지하게 계승되고 있습니다.
+                특히 초기 작품들에 비해 훨씬 거대한 규모의 데이터를 다루며, 인공지능을 더욱 적극적으로 활용하는 방향으로 발전하고 있습니다.
+                이러한 접근은 페블러스가 추구하는 <strong>"Tangible Data"</strong> — 추상적인 데이터를 손에 잡히는 형태로 변환하는 것 — 에 기여하고 있습니다.
+            </p>
             <p class="definition-en">
                 Code Painting is a creative method of making visual art using programming code.
                 Just as a painter uses brushes and paint on canvas, a code painter uses programming languages on a digital canvas.
