--- a/project/PhysicalAI/data-startup-physical-ai-01.html
+++ b/project/PhysicalAI/data-startup-physical-ai-01.html
@@ -11,6 +11,26 @@
     <meta property="og:url" content="https://blog.pebblous.ai/project/PhysicalAI/data-startup-physical-ai-01.html">
     <title id="page-title">초격차를 위한 마지막 퍼즐: 피지컬 AI와 데이터 중심 AI 스타트업 | Pebblous Blog</title>
 
+    <!-- JSON-LD: DigitalDocument for PDF SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "DigitalDocument",
+        "name": "Physical AI와 데이터 중심 AI 스타트업의 국가 전략적 가치",
+        "url": "https://blog.pebblous.ai/project/PhysicalAI/Physical%20AI%EC%99%80%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EC%A4%91%EC%8B%AC%20AI%20%EC%8A%A4%ED%83%80%ED%8A%B8%EC%97%85%EC%9D%98%20%EA%B5%AD%EA%B0%80%20%EC%A0%84%EB%9E%B5%EC%A0%81%20%EA%B0%80%EC%B9%98.pdf",
+        "description": "피지컬 AI 시대, 데이터 중심 AI 스타트업이 국가 산업 경쟁력 확보에 미치는 전략적 가치를 분석한 리포트",
+        "author": {
+            "@type": "Organization",
+            "name": "Pebblous",
+            "url": "https://www.pebblous.ai"
+        },
+        "datePublished": "2025-11-07",
+        "inLanguage": "ko-KR",
+        "encodingFormat": "application/pdf",
+        "keywords": "피지컬 AI, Physical AI, 데이터 중심 AI, AI 스타트업, 국가 전략, 소버린 AI"
+    }
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" href="/image/favicon.ico" sizes="any">
     <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
