physical AI hub

--- a/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
+++ b/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
@@ -584,6 +584,16 @@
         <!-- Main Content -->
         <main class="max-w-[800px] px-4 sm:px-6">
 
+        <!-- Hub Page Link -->
+        <nav class="mb-8">
+            <a href="physical-ai.html" class="inline-flex items-center gap-2 text-sm text-slate-400 hover:text-orange-500 transition-colors">
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+                </svg>
+                ← 피지컬 AI 리소스 허브
+            </a>
+        </nav>
+
         <!-- Hero Section -->
         <header class="text-center mb-16">
             <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-6 leading-tight" style="line-height: 1.4;">
