--- a/project/PhysicalAI/physical-ai.html
+++ b/project/PhysicalAI/physical-ai.html
@@ -257,6 +257,15 @@
             color: var(--text-secondary);
             margin-top: 0.5rem;
         }
+        .stat-desc {
+            font-size: 0.75rem;
+            color: var(--text-secondary);
+            margin-top: 0.75rem;
+            padding-top: 0.75rem;
+            border-top: 1px solid var(--border);
+            line-height: 1.5;
+            text-align: left;
+        }
         .report-cards {
             display: grid;
             gap: 1.5rem;
@@ -418,18 +427,22 @@
                 <div class="stat-card">
                     <div class="stat-value">$1.2T</div>
                     <div class="stat-label">미국 제조업 투자 규모</div>
+                    <div class="stat-desc">2025년 발표된 미국 생산설비 확충 투자액. 반도체, 전자, 제약 기업들이 피지컬 AI와 Omniverse 기반 로봇 공장 구축에 투자 중</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-value">10배</div>
                     <div class="stat-label">휴머노이드 시장 성장<br>(2024→2030)</div>
+                    <div class="stat-desc">$14억(2024) → $130~150억(2030) 전망. Figure, Agility, Tesla Optimus 등 휴머노이드 기업들이 제조 현장 투입 가속화</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-value">$10.8K</div>
                     <div class="stat-label">산업용 로봇 평균 가격<br>(2010년 $46K)</div>
+                    <div class="stat-desc">15년간 로봇 가격 77% 하락. AI 기반 범용 로봇이 확산되면서 중소기업도 로봇 도입이 가능한 수준으로 진입</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-value">54%</div>
                     <div class="stat-label">중국 산업용 로봇<br>글로벌 점유율</div>
+                    <div class="stat-desc">2024년 전세계 54만 대 중 29.5만 대가 중국에 설치. 한국은 고정밀·고안전 틈새시장 공략 전략 필요</div>
                 </div>
             </div>
 
