update physical AI competition

--- a/project/PhysicalAI/physical-ai.html
+++ b/project/PhysicalAI/physical-ai.html
@@ -1161,6 +1161,15 @@
                                 <span>📑 PDF 다운로드</span>
                             </div>
                         </a>
+                        <a href="physical-ai-competition-strategy.html" class="report-card">
+                            <h3>📄 피지컬 AI 시대의 패권 경쟁: 데이터 중심 생존 전략</h3>
+                            <p>3대 데이터 장벽(희소성, 이질성, Sim-to-Real Gap), GICO 개념, 10대 핵심 역량 평가 프레임워크, 그리고 페블러스 솔루션.</p>
+                            <div class="meta">
+                                <span>📅 2025.12</span>
+                                <span>⏱ 20분 읽기</span>
+                                <span>📑 PDF 다운로드</span>
+                            </div>
+                        </a>
                     </div>
                 </section>
 
