business section update

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             <nav class="hidden md:flex items-center space-x-8 text-sm font-medium text-slate-300" aria-label="Main navigation">
                 <a href="#art" class="hover:text-white transition-colors">Data Art</a>
                 <a href="#tech" class="hover:text-white transition-colors">Tech Insights</a>
+                <a href="#business" class="hover:text-white transition-colors">Business</a>
                 <a href="#story" class="hover:text-white transition-colors">Data Stories</a>
                 <button id="theme-toggle-btn" class="theme-toggle-btn text-slate-300 hover:text-white" aria-label="테마 변경" title="테마 변경">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -252,6 +253,7 @@
             <div class="container mx-auto px-6 py-4 space-y-3">
                 <a href="#art" class="block text-slate-300 hover:text-white transition-colors">Data Art</a>
                 <a href="#tech" class="block text-slate-300 hover:text-white transition-colors">Tech Insights</a>
+                <a href="#business" class="block text-slate-300 hover:text-white transition-colors">Business</a>
                 <a href="#story" class="block text-slate-300 hover:text-white transition-colors">Data Stories</a>
                 <a href="https://www.pebblous.ai/en/request" target="_blank" rel="noopener noreferrer" class="block text-slate-300 hover:text-white transition-colors">Contact</a>
             </div>
@@ -363,12 +365,25 @@
                 </div>
             </div>
 
+            <div id="business" class="mb-20 mt-32 relative">
+                <div class="absolute left-0 w-2 accent-bg" style="height: calc((8rem + 3rem) * 0.75); top: calc(-8rem + 2rem + (8rem + 3rem) * 0.125);"></div>
+                <h2 id="business-title" class="text-3xl font-bold text-white mb-2 border-l-8 accent-border pl-6">
+                    <span class="loading-text">Loading...</span>
+                </h2>
+                <p class="text-slate-400 mb-6 pl-6">투자, 특허, 시장 분석, 정책 전략 - IR, IP 포트폴리오, 비즈니스 인사이트</p>
+                <div id="business-articles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 lg:gap-8">
+                    <div class="flex justify-center items-center py-20">
+                        <div class="loading"></div>
+                    </div>
+                </div>
+            </div>
+
             <div id="story" class="mb-20 mt-32 relative">
                 <div class="absolute left-0 w-2 accent-bg" style="height: calc((8rem + 3rem) * 0.75); top: calc(-8rem + 2rem + (8rem + 3rem) * 0.125);"></div>
                 <h2 id="story-title" class="text-3xl font-bold text-white mb-2 border-l-8 accent-border pl-6">
                     <span class="loading-text">Loading...</span>
                 </h2>
-                <p class="text-slate-400 mb-6 pl-6">데이터로 풀어내는 산업 이야기 - 합성데이터, LLM 데이터셋, 투자 분석 등 실전 케이스 스터디</p>
+                <p class="text-slate-400 mb-6 pl-6">튜토리얼, 가이드, 사례 연구 - LLM 데이터셋, SQL 실습, 도구 활용</p>
                 <div id="story-articles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 lg:gap-8">
                     <div class="flex justify-center items-center py-20">
                         <div class="loading"></div>
@@ -1193,21 +1208,23 @@
                 // Filter and group articles by category, then sort
                 const artArticles = sortArticles(allArticles.filter(a => a.category === 'art'));
                 const techArticles = sortArticles(allArticles.filter(a => a.category === 'tech'));
+                const businessArticles = sortArticles(allArticles.filter(a => a.category === 'business'));
                 const storyArticles = sortArticles(allArticles.filter(a => a.category === 'story'));
 
                 // Render articles
                 renderArticles('art-articles', artArticles);
                 renderArticles('tech-articles', techArticles);
+                renderArticles('business-articles', businessArticles);
                 renderArticles('story-articles', storyArticles);
 
                 // Setup search
                 setupSearch();
 
                 // Setup statistics modal
-                setupStatsModal(artArticles, techArticles, storyArticles);
+                setupStatsModal(artArticles, techArticles, businessArticles, storyArticles);
             } catch (error) {
                 console.error('Failed to load articles:', error);
-                ['art-articles', 'tech-articles', 'story-articles'].forEach(id => {
+                ['art-articles', 'tech-articles', 'business-articles', 'story-articles'].forEach(id => {
                     document.getElementById(id).innerHTML = '<p class="text-slate-400 text-center py-10">기사를 불러오는데 실패했습니다.</p>';
                 });
             }
@@ -1222,6 +1239,9 @@
                 tech: `<svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path>
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                </svg>`,
+                business: `<svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                 </svg>`,
                 story: `<svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
@@ -1348,12 +1368,12 @@
         }
 
         // Statistics Modal Functions
-        function setupStatsModal(artArticles, techArticles, storyArticles) {
+        function setupStatsModal(artArticles, techArticles, businessArticles, storyArticles) {
             const statsContent = document.getElementById('stats-content');
             const statsUpdateDate = document.getElementById('stats-update-date');
 
             // Calculate statistics
-            const totalArticles = artArticles.length + techArticles.length + storyArticles.length;
+            const totalArticles = artArticles.length + techArticles.length + businessArticles.length + storyArticles.length;
 
             // Create statistics HTML with monochrome vector icons
             const categoryIcons = {
@@ -1363,6 +1383,9 @@
                 tech: `<svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path>
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                </svg>`,
+                business: `<svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                 </svg>`,
                 story: `<svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
@@ -1383,6 +1406,13 @@
                     count: techArticles.length,
                     icon: categoryIcons.tech,
                     color: '#14b8a6'
+                },
+                {
+                    key: 'business',
+                    name: categories.business?.name || 'Business',
+                    count: businessArticles.length,
+                    icon: categoryIcons.business,
+                    color: '#f59e0b'
                 },
                 {
                     key: 'story',
