--- a/project/IR/PBLS-IR-Physical-AI-01.html
+++ b/project/IR/PBLS-IR-Physical-AI-01.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <meta name="description" content="페블러스 투자 유치 제안서 - Physical AI 시대를 위한 데이터 그린하우스 전략 (CONFIDENTIAL)">
-    <meta property="og:title" content="페블러스 투자 유치 제안서 | Physical AI 데이터 그린하우스">
-    <meta property="og:description" content="Non-IT 기간산업을 위한 AI-Ready 데이터 생성 플랫폼. 현대차 레퍼런스 기반 Mobility-First GTM 전략으로 Physical AI 시장 선점 | 20억원 투자 유치 제안 (CONFIDENTIAL)">
+    <meta name="description" content="페블러스 투자 유치 제안서 - Physical AI 시대를 위한 데이터 그린하우스 전략. 제조 AI 데이터 인프라 스타트업 투자 기회 (CONFIDENTIAL)">
+    <meta name="keywords" content="페블러스 투자, 페블러스, Pebblous, 스타트업 투자, AI 스타트업, Physical AI, 피지컬 AI, 제조 AI, 데이터 인프라, AI 데이터 플랫폼, 시리즈 A, 투자 유치, IR, 투자자료, 데이터 그린하우스, AADS, DataClinic, PebbloScope">
+    <meta name="author" content="페블러스 (Pebblous)">
+    <meta property="og:title" content="페블러스 투자 유치 제안서 | Physical AI 데이터 인프라 스타트업">
+    <meta property="og:description" content="Non-IT 기간산업을 위한 AI-Ready 데이터 생성 플랫폼. 현대차 레퍼런스 기반 Mobility-First GTM 전략으로 Physical AI 시장 선점 | 페블러스 투자 기회 (CONFIDENTIAL)">
     <meta property="og:type" content="article">
+    <meta property="og:site_name" content="페블러스 (Pebblous)">
+    <meta property="og:locale" content="ko_KR">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="페블러스 투자 유치 제안서 | Physical AI 스타트업">
+    <meta name="twitter:description" content="제조 AI 데이터 인프라의 새로운 표준. 페블러스 투자 기회 안내.">
     <title id="page-title">페블러스 투자 유치 제안서 | Physical AI 데이터 그린하우스 전략</title>
 
     <!-- Favicon -->
@@ -19,6 +26,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap" rel="stylesheet">
+
+    <!-- Organization Schema for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "페블러스",
+        "alternateName": ["Pebblous", "페블러스 주식회사"],
+        "url": "https://pebblous.github.io",
+        "logo": "https://pebblous.github.io/image/Pebblous_BM_Orange_RGB.png",
+        "description": "Physical AI 시대를 위한 AI-Ready 데이터 인프라 전문 기업. 제조 산업의 데이터 품질 관리와 AI 학습 데이터 생성 플랫폼 제공.",
+        "foundingDate": "2023",
+        "industry": "AI Data Infrastructure, Manufacturing AI",
+        "knowsAbout": ["Physical AI", "AI Data Pipeline", "Manufacturing Data", "Data Quality Management", "ISO 5259", "AADS", "DataClinic"],
+        "slogan": "데이터 그린하우스 - Raw Data를 Green Data로",
+        "sameAs": [
+            "https://github.com/pebblous"
+        ]
+    }
+    </script>
 
     <!-- FAQPage Schema for SEO -->
     <script type="application/ld+json">
@@ -72,6 +99,14 @@
                 "acceptedAnswer": {
                     "@type": "Answer",
                     "text": "글로벌 경쟁사(Dataiku, Databricks, Alteryx)는 범용 데이터 플랫폼으로 제조 특화 기능이 약합니다. 국내 경쟁사(삼성SDS, LG CNS)는 SI 중심으로 SaaS 제품이 부족합니다. 페블러스는 1) 제조 Physical AI에 특화된 전문성, 2) 경량 Edge 솔루션으로 현장 배포 용이, 3) ISO 표준 기반의 글로벌 확장성, 4) 대기업 SI 경험(삼성, 현대차 PoC)으로 레퍼런스 확보. First-Mover Advantage로 국내 Physical AI 데이터 시장의 50% 점유율 목표입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "페블러스 투자는 왜 매력적인 기회인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "페블러스 투자는 Physical AI 시대의 데이터 인프라 시장 선점 기회입니다. 핵심 투자 매력 포인트: 1) 시장 타이밍: 2025-2030년 Physical AI 시장 CAGR 38% 성장 예상. 2) 기술 차별화: ISO 5259 국제 표준 기반 + Edge-to-Core 아키텍처 + 제조 도메인 특화. 3) 검증된 레퍼런스: 현대차, 삼성전자 등 대기업 PoC 수행 실적. 4) 확장성: 한국 제조업 시작으로 일본·동남아·유럽 글로벌 확장 계획. 5) 팀 역량: AI 데이터 전문가 + 제조 도메인 전문가 구성. 페블러스에 투자하면 AI 데이터 인프라 표준화의 First Mover가 될 수 있습니다."
                 }
             }
         ]
