--- a/project/CURK/ontology/enterprise-ontology-paradigm.html
+++ b/project/CURK/ontology/enterprise-ontology-paradigm.html
@@ -22,6 +22,8 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://blog.pebblous.ai/project/CURK/ontology/enterprise-ontology-paradigm.html">
     <meta property="og:image" content="https://blog.pebblous.ai/project/CURK/ontology/image/ontology-paradigm-og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Pebblous Blog">
     <meta property="og:locale" content="ko_KR">
 
@@ -29,6 +31,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="엔터프라이즈 온톨로지 패러다임의 전환">
     <meta name="twitter:description" content="시맨틱 웹에서 팔란티어 운영 온톨로지까지. 엔터프라이즈 AI의 새로운 패러다임.">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/project/CURK/ontology/image/ontology-paradigm-og.png">
 
     <!-- Favicon -->
     <link rel="icon" href="/image/favicon.ico" sizes="any">
@@ -75,6 +78,64 @@
             {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://blog.pebblous.ai/"},
             {"@type": "ListItem", "position": 2, "name": "Ontology", "item": "https://blog.pebblous.ai/project/CURK/ontology/"},
             {"@type": "ListItem", "position": 3, "name": "엔터프라이즈 온톨로지 패러다임", "item": "https://blog.pebblous.ai/project/CURK/ontology/enterprise-ontology-paradigm.html"}
+        ]
+    }
+    </script>
+
+    <!-- JSON-LD: FAQPage -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "팔란티어 온톨로지와 전통적 시맨틱 웹 온톨로지의 차이점은?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "전통적 시맨틱 웹 온톨로지는 OWL/RDF 기반의 트리플 구조로 지식 발견과 분류에 초점을 맞추며, 개방형 세계 가설(OWA)을 따릅니다. 반면 팔란티어 온톨로지는 객체-속성-링크 구조로 운영 앱 백엔드와 트랜잭션 처리에 특화되어 있으며, 폐쇄형 세계 가설(CWA)을 채택하여 비즈니스 로직 실행에 최적화되어 있습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "키네틱 레이어(Kinetic Layer)란 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "키네틱 레이어는 팔란티어 온톨로지의 3계층 아키텍처 중 핵심으로, 객체의 상태 변경, 프로세스 실행, 외부 시스템으로의 쓰기(Write-back)를 담당합니다. 전통 온톨로지가 '무엇(What)'을 정의하는 데 그친다면, 키네틱 레이어는 '어떻게(How)' 변화시킬 것인가를 정의하여 읽기 전용 시스템을 쓰기 가능한 운영 시스템으로 변환합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "OAG(Ontology-Augmented Generation)와 RAG의 차이는?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "RAG는 벡터 데이터베이스에서 비정형 텍스트 청크를 검색하여 LLM에 제공하므로 환각(Hallucination) 발생 가능성이 있습니다. OAG는 텍스트가 아닌 온톨로지의 구조화된 객체 자체를 LLM 컨텍스트로 주입하여, 결정론적 추론이 가능하고 환각 여지를 획기적으로 줄입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "개방형 세계 가설(OWA)과 폐쇄형 세계 가설(CWA)의 차이는?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "OWA는 '현재 알려지지 않은 사실이 반드시 거짓인 것은 아니다'라는 전제로, 학술적 지식 표현에 적합합니다. CWA는 기업 내부 데이터를 '완결된 세계'로 간주하여 데이터가 없으면 '거짓' 또는 '해당 없음'으로 처리합니다. 엔터프라이즈 운영 시스템에서는 CWA가 더 적합합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "AIP Logic에서 온톨로지는 어떻게 활용되나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "AIP Logic에서 온톨로지는 LLM의 '도구(Tool)'로 활용됩니다. LLM이 Query Objects로 필요한 데이터를 검색하고, Calculator로 정확한 수치 계산을 수행하며, Apply Action으로 추론 결과에 따라 실제 데이터 수정이나 외부 시스템 라이트백을 실행할 수 있습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "팔란티어 vs Neo4j vs Stardog 중 어떤 것을 선택해야 하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Neo4j는 그래프 알고리즘과 Cypher 쿼리에 강점이 있는 데이터베이스입니다. Stardog는 데이터 가상화와 OWL/RDF 기반 추론 엔진에 특화되어 읽기 중심 워크로드에 적합합니다. 팔란티어 파운드리는 운영형 온톨로지로 ERP 라이트백, 트랜잭션 처리, AIP를 통한 AI 통합까지 지원하여 엔터프라이즈 운영 시스템에 최적화되어 있습니다."
+                }
+            }
         ]
     }
     </script>
