--- a/project/DataClinic/data-greenhouse.html
+++ b/project/DataClinic/data-greenhouse.html
@@ -1541,7 +1541,7 @@
     <script>
         // Password Protection with Analytics Logging
         (function() {
-            const CORRECT_PASSWORD = 'pbls0401DataGreenhouse2026';
+            const CORRECT_PASSWORD = 'pblsDataGreenhouse2026!';
             const SESSION_KEY = 'data_greenhouse_auth';
 
             // Log password attempt to Google Analytics
