data greenhouse update

--- a/project/DataClinic/data-greenhouse.html
+++ b/project/DataClinic/data-greenhouse.html
@@ -854,28 +854,28 @@
                             <span class="text-xl">📊</span> Data Greenhouse 아키텍처 다이어그램
                         </h3>
 
-                        <!-- SVG viewBox: 1458 x 535, aspect ratio ~2.73:1 -->
-                        <div id="diagram-container" class="themeable-card rounded-xl p-4 relative overflow-hidden" style="aspect-ratio: 1458 / 535; max-height: 70vh; cursor: grab;">
+                        <!-- SVG viewBox: 1482 x 1336, aspect ratio ~1.11:1 -->
+                        <div id="diagram-container" class="themeable-card rounded-xl p-4 relative overflow-hidden" style="aspect-ratio: 1482 / 1336; max-height: 70vh; cursor: grab;">
                             <div id="diagram-wrapper" style="width: 100%; height: 100%; transform-origin: 0 0; transition: transform 0.1s ease-out;">
                                 <object id="architecture-svg"
                                         type="image/svg+xml"
-                                        data="image/data-greenhouse-2025.svg"
+                                        data="image/data-greenhouse-2025-v0.32.svg"
                                         style="width: 100%; height: 100%; pointer-events: none;">
                                     Data Greenhouse Architecture Diagram
                                 </object>
                             </div>
 
                             <!-- Zoom Controls -->
-                            <div class="absolute bottom-4 right-4 flex gap-2">
-                                <button id="zoom-in" class="w-10 h-10 rounded-lg flex items-center justify-center text-white font-bold text-lg"
-                                        style="background: var(--accent-color);" title="확대 (마우스 휠 또는 +)">+</button>
-                                <button id="zoom-out" class="w-10 h-10 rounded-lg flex items-center justify-center text-white font-bold text-lg"
-                                        style="background: var(--teal-color);" title="축소 (마우스 휠 또는 -)">−</button>
-                                <button id="zoom-reset" class="w-10 h-10 rounded-lg flex items-center justify-center text-white text-sm"
-                                        style="background: var(--text-muted);" title="원래 크기로 (0)">⟲</button>
-                                <button id="fullscreen-btn" class="w-10 h-10 rounded-lg flex items-center justify-center text-white"
-                                        style="background: #8b5cf6;" title="전체화면 (F)">
-                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <div class="absolute bottom-4 right-4 flex gap-1">
+                                <button id="zoom-in" class="w-7 h-7 rounded flex items-center justify-center text-white font-bold text-sm"
+                                        style="background: #6b7280; box-shadow: 0 1px 3px rgba(0,0,0,0.2);" title="확대 (마우스 휠 또는 +)">+</button>
+                                <button id="zoom-out" class="w-7 h-7 rounded flex items-center justify-center text-white font-bold text-sm"
+                                        style="background: #6b7280; box-shadow: 0 1px 3px rgba(0,0,0,0.2);" title="축소 (마우스 휠 또는 -)">−</button>
+                                <button id="zoom-reset" class="w-7 h-7 rounded flex items-center justify-center text-white text-xs"
+                                        style="background: #6b7280; box-shadow: 0 1px 3px rgba(0,0,0,0.2);" title="원래 크기로 (0)">⟲</button>
+                                <button id="fullscreen-btn" class="w-7 h-7 rounded flex items-center justify-center text-white"
+                                        style="background: #6b7280; box-shadow: 0 1px 3px rgba(0,0,0,0.2);" title="전체화면 (F)">
+                                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"></path>
                                     </svg>
                                 </button>
@@ -890,7 +890,7 @@
 
                         <p class="text-sm themeable-muted mt-3 text-center">
                             🖱️ 마우스 휠로 줌, 드래그로 패닝 |
-                            <a href="https://www.mermaidchart.com/d/6424779c-2506-4aed-96d4-5450009e1efa"
+                            <a href="https://www.mermaidchart.com/d/592fa2d8-7539-4719-a032-11ac22c841c2"
                                target="_blank" rel="noopener noreferrer"
                                class="accent-text hover:underline">Mermaid Chart에서 원본 보기 ↗</a>
                         </p>
@@ -1511,21 +1511,21 @@
         </div>
 
         <!-- Zoom Controls -->
-        <div class="absolute bottom-6 left-1/2 transform -translate-x-1/2 flex gap-3 z-10">
-            <button id="modal-zoom-in" class="w-12 h-12 rounded-lg flex items-center justify-center text-white font-bold text-xl hover:opacity-80 transition-opacity"
-                    style="background: #F86825;" title="확대">+</button>
-            <button id="modal-zoom-out" class="w-12 h-12 rounded-lg flex items-center justify-center text-white font-bold text-xl hover:opacity-80 transition-opacity"
-                    style="background: #14b8a6;" title="축소">−</button>
-            <button id="modal-zoom-reset" class="w-12 h-12 rounded-lg flex items-center justify-center text-white hover:opacity-80 transition-opacity"
-                    style="background: rgba(255,255,255,0.2);" title="원래 크기">⟲</button>
+        <div class="absolute bottom-6 left-1/2 transform -translate-x-1/2 flex gap-1 z-10">
+            <button id="modal-zoom-in" class="w-7 h-7 rounded flex items-center justify-center text-white font-bold text-sm hover:opacity-80 transition-opacity"
+                    style="background: #6b7280; box-shadow: 0 1px 3px rgba(0,0,0,0.2);" title="확대">+</button>
+            <button id="modal-zoom-out" class="w-7 h-7 rounded flex items-center justify-center text-white font-bold text-sm hover:opacity-80 transition-opacity"
+                    style="background: #6b7280; box-shadow: 0 1px 3px rgba(0,0,0,0.2);" title="축소">−</button>
+            <button id="modal-zoom-reset" class="w-7 h-7 rounded flex items-center justify-center text-white text-xs hover:opacity-80 transition-opacity"
+                    style="background: #6b7280; box-shadow: 0 1px 3px rgba(0,0,0,0.2);" title="원래 크기">⟲</button>
         </div>
 
         <!-- SVG Container -->
         <div id="modal-content" class="w-full h-full flex items-center justify-center overflow-hidden" style="cursor: grab;">
             <div id="modal-wrapper" style="transform-origin: center center; transition: transform 0.1s ease-out; background: white; padding: 20px; border-radius: 8px;">
                 <object type="image/svg+xml"
-                        data="/project/DataClinic/image/data-greenhouse-2025.svg"
-                        style="width: 1200px; height: 440px; pointer-events: none;">
+                        data="/project/DataClinic/image/data-greenhouse-2025-v0.32.svg"
+                        style="width: 800px; height: 721px; pointer-events: none;">
                     Data Greenhouse Architecture Diagram
                 </object>
             </div>
